<resources>
    <string name="app_name">twitter_mini</string>
    <string name="login">login</string>
    <string name="signup">signup</string>
    <string name="name">nome</string>
    <string name="email">email</string>
    <string name="password">senha</string>
    <string name="tweet">Tweet</string>
    <string name="my_feed">My Feed</string>
    <string name="logout">Logout</string>
    <string name="start">START</string>
</resources>